Change margin to padding in piece header to avoid weird image shift

--- a/app/assets/stylesheets/pages/_piece.css.scss
+++ b/app/assets/stylesheets/pages/_piece.css.scss
@@ -35,7 +35,7 @@
     .piece-header-text {
       @include centered;
       max-width: flex-grid(6);
-      @include margin-v(16%);
+      @include padding-v(16%);
     }
   }
 
